--- a/.github/workflows/fetch_avatars.yml
+++ b/.github/workflows/fetch_avatars.yml
@@ -13,6 +13,8 @@ jobs:
               uses: actions/setup-python@v5.2.0
               with:
                   python-version: '3.12.6'
+            - name: Install Dependencies
+              run: pip install -q requests
             - name: Run Python Script
               run: python get_channel_avatar.py
             - name: Push To Master
