--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-beautifulsoup4==4.12.3
-certifi==2024.12.14
-charset-normalizer==3.4.1
-deep-translator==1.11.4
-idna==3.10
-inflect==7.5.0
-more-itertools==10.6.0
-python-dotenv==1.0.1
-pytz==2024.2
-requests==2.32.3
-soupsieve==2.6
-typeguard==4.4.1
-typing_extensions==4.12.2
-urllib3==2.3.0
-yt-dlp==2025.1.15
+beautifulsoup4
+certifi
+charset-normalizer
+deep-translator
+idna
+inflect
+more-itertools
+python-dotenv
+pytz
+requests
+soupsieve
+typeguard
+typing_extensions
+urllib3
+yt-dlp
